# spider

./: .gitignore  README.md  pyproject.toml
src/spider.egg-info/: PKG-INFO  SOURCES.txt
src/spider/game/: actions.py  cards.py  rules.py  serialize.py  state.py
src/spider/ui/: __main__.py  app.py  theming.css
tests/: test_actions.py  test_rules.py
