[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spider-tui"
version = "0.1.0"
description = "Spider Solitaire in terminale con Textual"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alessio Sassu" }]
dependencies = [
  "textual>=0.48,<1.0",
  "rich>=13.0.0"
]

[tool.setuptools.package-data]
"spider.ui" = ["theming.css"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
spider = "spider.ui.app:main"
